--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
+<html lang="en-US">
 <meta charset="utf8">
-
+<head>
 <h1>TABLE PERSONAL</h1>
 <link rel="manifest" href="manifest.json">
 <div id="personal"></div>
@@ -12,6 +13,8 @@
         .catch(console.log)
     }
   </script>
+</head>
+    <body>
 <script>
   const PERSONAL = [
     {name: "Gokce", age:  22 , department: "  Ortopedi"},
@@ -49,12 +52,14 @@
   }
   document.querySelector("#personal")
     .appendChild(buildTable(PERSONAL));
+    </body>
 </script>
-<body>
+
 <p> 
 <a href="https://gokcedastan.github.io/AdvancedProgrammingHW/hw3.html" rel="nofollow" >HW3 </a> </p>
 <p><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/" rel="nofollow" >Github Repo </a> </p>
 <p> <a href="https://gokcedastan.github.io/AdvancedProgrammingHW/index.html" rel="nofollow" >CW7 </a> </p>
 
 
-</body>
+
+</html>
