--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <p> 
 <a href="https://gokcedastan.github.io/AdvancedProgrammingHW/hw3.html" rel="nofollow" >HW3 </a> </p>
 
-<p><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/" rel="nofollow" >Github Repo </a> </p>
+<p><a href="https://github.com/gokcedastan" rel="nofollow">github</a> </p>
 
 <p> <a href="https://gokcedastan.github.io/AdvancedProgrammingHW/index.html" rel="nofollow" >CW7 </a> </p>
 
