--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
   </script>
     <meta charset="utf-8">
-    <link rel="icon" sizes="192x192" href="my.png">
+    <link rel="icon" sizes="192x192" href="myicon.png">
     <title>Index</title>
   </head>
 
