--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
     <meta charset="utf-8">
     <link rel="icon" sizes="192x192" href="myicon.png">
-    <title>Index</title>
+    <title>Gökçe Daştan JS</title>
   </head>
 
 <!DOCTYPE html>
