--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@
   </ul>
    
 </div>
+     <div class="columns">
+  <ul class="price">
+    <li class="header" style="background-color:#4CAF50">Class Work 7</li>
+     <li>DOM and PWA</li>
+     <li class="grey"><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/SVG.html" class="button">CW9</a></li>
+      
+  </ul>
+   
+</div>
 
 
 
