--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
     <li class="header" style="background-color:#4CAF50">Class Work 6</li>
      <li>Animation</li>
      <li class="grey"><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/timing.html" class="button">CW6</a></li>
-      
+      <ul class="price">
+           <li class="header" style="background-color:#4CAF50">Home Work 4B:</li>
+    <li>My Home Page</li>
+    <li class="grey"><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/Default.html" class="button">HW4B</a></li>
+  </ul>
   </ul>
     
 </div>
