--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
      <li class="grey"><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/timing.html" class="button">CW6</a></li>
       <ul class="price">
            <h1> </h1>
-           <li class="header" style="background-color:#4CAF50">Home Work 4B:</li>
-    <li>My Home Page</li>
-    <li class="grey"><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/Default.html" class="button">HW4B</a></li>
+           <li class="header" style="background-color:#4CAF50">Donem Odevi:</li>
+    <li>Proje Sudoku</li>
+    <li class="grey"><a href="https://gokcedastan.github.io/AdvancedProgrammingHW/Default.html" class="button">Proje</a></li>
   </ul>
   </ul>
     
