--- a/Default.html
+++ b/Default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<h1 style="text-align:left"><a href="https://github.com/MicrosoftEdge/Sudoku/blob/master/index.html" target="_blank" >Referans</a></h1>
+	<h1 style="text-align:left"><a href="https://github.com/baruchel/sudoku-js/blob/master/sudoku.js" target="_blank" >Referans</a></h1>
 
     <head>
 	<title>Sudoku</title>        
