--- a/Default.html
+++ b/Default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<h1 style="text-align:left"><a href="https://github.com/baruchel/sudoku-js/blob/master/sudoku.js" target="_blank" >Referans</a></h1>
+     	<h2 style="text-align:left"><a href="http://moriel.smarterthanthat.com/tips/javascript-sudoku-backtracking-algorithm/" target="_blank" >Referans</a></h2>
 
     <head>
 	<title>Sudoku</title>        
