--- a/Default.html
+++ b/Default.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<h1 style="text-align:left"><a href="https://github.com/baruchel/sudoku-js/blob/master/sudoku.js" target="_blank" >Referans</a></h1>
-     	<h2 style="text-align:left"><a href="http://moriel.smarterthanthat.com/tips/javascript-sudoku-backtracking-algorithm/" target="_blank" >Referans</a></h2>
-
+	
     <head>
 	<title>Sudoku</title>        
         <meta http-equiv="Content-Language" content="en-us" />
@@ -541,7 +539,7 @@
                     </div>
                     <div id="Column2">
                         <div class="gameControlSet">
-                            <input id="newGameButton" type="submit" value="NEW GAME" class="gameControls"/>
+                            <input id="newGame" type="submit" value="NEW GAME" class="gameControls"/>
                             <br/>
                             <label>
                                 Level:
@@ -554,13 +552,13 @@
                             </select>
                         </div>
                         <div class="gameControlSet">
-                            <input id="checkButton" type="submit" value="CHECK &#x2713;" class="gameControls"/>
+                            <input id="check" type="submit" value="CHECK  &#x2713;" class="gameControls"/>
                             <br/>
                             <span id="errorsFound" class="errorsFound" style="display: none;" role="tab" aria-selected="true" aria-controls="ErrorsFound" tabindex="300">MISTAKE</span>
                             <span id="noErrors" class="noErrors" style="display: none;" role="tab" aria-selected="true" aria-controls="NoErrorsFound" tabindex="400">GOOD</span>
                         </div>
                         <div class="gameControlSet">
-                            <input id="solveButton" type="submit" value="SOLVE" class="gameControls"/>
+                            <input id="solve" type="submit" value="SOLVE" class="gameControls"/>
                         </div>
                     </div>
                 </div>
@@ -574,7 +572,10 @@
                 <br/>
              
             </div>
-        </div>
+        
         <script type="text/javascript" src="demo.js"></script>
     </body>
+<h1 style="text-align:right"><a href="https://github.com/baruchel/sudoku-js/blob/master/sudoku.js" target="_blank" >Referans 1</a></h1>
+     	<h1 style="text-align:right"><a href="http://moriel.smarterthanthat.com/tips/javascript-sudoku-backtracking-algorithm/" target="_blank" >Referans 2</a></h1>
+
 </html>
