--- a/SVG.html
+++ b/SVG.html
@@ -1,72 +1,98 @@
+
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>SVG and Canvas </title>
-
-  <style>
-    svg, canvas {
-        background: cyan;
-        font: 10px arial, sans-serif;
-    }
-  </style>
+    <meta name="viewport" content="width=device-width" "text-align:center">
+    <title>Hasta Bilgileri </title>
 </head>
 
-<body>
-
-<h2>CW9: Using SVG</h2>
-<svg id='svg' width='500' height='200'>
-  <circle id="circle1" cx='100' cy='100' r='40'
-  style='fill:red;stroke:black;stroke-width:4' />
-  <text x='85' y='100' fill='black'>Circle</text>
-  <rect id="rect1" x='300' y='57' width='100' height='80'
-  style='fill:black;stroke:red;stroke-width:5' />
-  <text x='330' y='100' fill='white'>Rect</text>
-</svg>
-<p>Circle fill color :<input id="circleFill" type="color" value="#ff0000"> 
- Radius :<input type="number" value=40 onchange="circleRadius(this)"></p>
-<hr />
-
-<p>
-<button onclick="circle1.style.stroke= 'white';">Change circle stroke color</button>
-
-
-
-<button onclick="rect1.style.stroke= 'yellow';">Change rect stroke color</button>
-</p>
-
-<p>Change circle color:
-<input id="colorPicker" type="color" value="#ff0000">
-</p>
 <script>
 "use strict";
-function circleRadius(elem){
-     circle1.setAttribute("r",elem.value);
-    }
-circleFill.addEventListener("change", circleFillEvent, false);
-    function circleFillEvent(event) {
-        circle1.style.fill=event.target.value;
-    }
-function updateFirst(event) {
-  var p = document.querySelector("p");
-
-  if (p) {
-    circle1.style.fill=event.target.value;
-  }
+function HastaBilgi(Tc, name,surname, phone, Deviceid){
+    this.tc=Tc;
+    this.n= name;
+    this.s= surname;
+    this.p=phone;
+	this.Did=Deviceid;
+}
+function Save() {
+    let TC = Number(tc_id.value);
+    let name = n_id.value; 
+	let surname = s_id.value; 
+    let phone = Number(p_id.value); 
+    let Deviceid = Number(de_id_id.value); 
+    bilgiler.push(new HastaBilgi(Tc, name, surname, phone, Deviceid));
 }
 
-colorPicker.addEventListener("input", updateFirst, false);
-colorPicker.addEventListener("change", watchColorPicker, false);
-
-function watchColorPicker(event) {
-  document.querySelectorAll("circle1").forEach(function(circle1) {
-    circle1.style.fill=event.target.value;
-  });
+function  Print ( )  {
+    let  print =  "" ;
+    for  ( let  i  =  0   ;  i  <  bilgiler.length  ;  i ++ ) {
+	print  + = bilgiler [ i ] . tc + bilgiler [ i ] . n  +  "" +  bilgiler [ i ] . s +  "" +  bilgiler [ i ] . p  +  bilgiler [ i ] . Did  +"\ n" ;  
+    }            
+    s1 . innerText  =  print ;
 }
-
 
 </script>
 
-</body>
+<body>
+<h2 id=title></h2>
+<p style="margin-bottom: 20px;">
+    <b style="padding-right: 82px;"> TC NO: </b>
+<input type="text" id="tc_id" value=" " >
+</p>
+<p style="margin-bottom: 20px;">
+    <b style="padding-right: 110px;"> AD: </b>
+<input type="text" id="n_id" value=" " >
+</p>
+ <p style="
+margin-top:5px;
+margin-bottom: 20px;"
+><b style="padding-right: 92px;">Soyad: </b>
+<input type="text" id="s_id" value="">
+</p>
 
+ <p style="
+margin-top:5px;
+margin-bottom: 20px;"
+><b style="padding-right: 83px;">Telefon: </b>
+<input type="text" id="p_id" value="">
+</p>
+
+<p style="margin-top: 20px;
+    margin-bottom: 5px;"> 
+    <b style="padding-right: 73px;">
+        Cihaz Id: </b>
+<input type="text" id="de_id" value=" " >
+</p>
+
+
+<p style="margin-top: 20px;
+    margin-bottom: 5px;
+">
+<input type="button" value="Save" ; onclick="Save()">
+</p>
+<p style="
+    margin-top: 5px;
+    margin-bottom: 5px;
+"></p>
+<input type=button value="Print"  onClick="Print()">
+</p>
+
+<hr>
+<p style="
+    margin-top: 5px;
+    margin-bottom: 5px;
+"> <b>Tc  Ad   Soyad   Telefon   Cihaz ID </b>
+</p>
+
+<p id=s1></p>
+<hr>
+
+<script>
+    title.innerText = document.title;
+    var bilgiler=[];
+</script>
+
+</body>
+</html>
